[package]
name = "crabers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.2"
bevy_pancam = "0.14.0"
rand = "0.8.5"
avian2d = "0.1.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
avian2d = {version = "0.1.2", features = ["parallel"]}
[target.'cfg(target_arch = "wasm32")'.dependencies]
avian2d = {version = "0.1.2"}

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"