[package]
name = "crabers"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["2d"] }
bevy_pancam = "0.20"
bevy_egui = "0.39"
rand = "0.10"
avian2d = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
avian2d = {version = "0.5", features = ["parallel"]}
[target.'cfg(target_arch = "wasm32")'.dependencies]
avian2d = {version = "0.5"}
getrandom = {version = "0.4", features = ["wasm_js"]}

[profile.web]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
